--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     </header>
 
     <div class="site-container">
-      <ul id="response-container"></ul>
+      <ul id="response-container">
+      </ul>
     </div>
-    
+
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
